# sourcevault_lite

./: .pre-commit-config.yaml  HEADER  Makefile  README.md  pyproject.toml  requirements.txt  version.py
docs/: HEADER  README.md
src/sourcevault_lite/: __init__.py  cli.py  shell.py  system.py  version.py
tests/: __init__.py
